--- a/css/style.css
+++ b/css/style.css
@@ -4,48 +4,69 @@
     box-sizing: border-box;
 }
 
+/* justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    align-content: center;
+    flex-wrap: wrap; */
+
+        /* flex-grow: 0; 
+    flex-shrink: 0;
+    flex-basis: 100px;
+    order: 1; */
+
 .container-flex {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start; /* main */
-    align-items: flex-start; /* cross */
-    flex-wrap: wrap;
-    height: 300px;
     background: #ccc;
 }
 
 .item{
-    flex-basis: 100px;
-    /* flex-grow: 0; */
-    /* flex-shrink: 0; */
-    order: 1;
-    font-size: 30px;
 }
 
-.bg1{
-    background-color:aquamarine;
-}
-.bg2{
+header{
+    padding: 10px;
     background-color:burlywood;
-}
-.bg3{
-    background-color:cadetblue;
-}
-.logo{
-    font-size: 50px;
-    padding: 20px;
 }
 
 .container{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 200px;
+    width: 800px;
+    margin: 0 auto;
 }
 
-.menu{
-    display: flex;
+.head-content{
+    padding: 10px;
+    background-color: blanchedalmond;
 }
-.menu div{
-    margin: 10px;
+
+footer{
+    padding: 10px;
+    background-color:cadetblue;
+}
+
+.footer-content{
+    padding: 10px;
+    background-color:darkseagreen;
+}
+
+main{
+    padding: 10px;
+    background-color:black;
+}
+
+.main-content{
+    display: flex;
+    justify-content: space-between;
+    background-color:gray;
+}
+
+.colsx{
+    flex-basis: 55%;
+    height: 120px;
+    background-color: aquamarine;
+}
+.coldx{
+    background-color:aqua;
+    flex-basis: 40%;
+    height: 70px;
 }
